[package]
name = "rs-prom2json"
version = "0.1.0"
edition = "2024"

description = "Converts the prometheus text to json."
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-prom2json"
homepage = "https://github.com/takanoriyanagitani/rs-prom2json"
documentation = "https://docs.rs/rs-prom2json/latest"
keywords = ["prometheus", "json", "convert"]
categories = ["command-line-utilities"]

exclude = [
	"prom2json",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[[bin]]
name = "prom2json"

[dependencies.serde]
version = "1"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]

[dependencies.prometheus-parse]
version = "0.2"
default-features = false
features = [
]
